--- a/AboutUs.html
+++ b/AboutUs.html
@@ -71,8 +71,8 @@
         in 2017 to accommodate large special exhibitions and a growing, vibrant contemporary art program. slated for completion in 2020. 
         The Akiko Yamazaki and Jerry Yang Pavilion and the East West Bank Art Terrace, designed by Kulapat Yantrasast of wHY — as well as refreshed collection
         galleries and public amenities.
-        <span>Reference:<a href="https://en.wikipedia.org/wiki/Kulapat_Yantrasast"
-            target="_blank">https://en.wikipedia.org/wiki/Kulapat_Yantrasast</a></span>
+        <span>Reference:<u><a href="https://en.wikipedia.org/wiki/Kulapat_Yantrasast"
+            target="_blank">https://en.wikipedia.org/wiki/Kulapat_Yantrasast</a></u></span>
       </h2>
       <h2>
         <img class="size01 float-right padding-left" src="./assets/images/tea-house.jpg"
